# Design-and-Analysis-of-Algorithms-II

./: CMakeLists.txt  a.out
array_processing/: bitonic_arrays.c  maximum_subarray_sum.c
backtracking/: ex1.c  ex2_permutation.c  ex3_score_sequences.c  ex4_sorting.c  ex5_max_permutation_sum.c  ex6_subset_sum.c  ex7_horses_route.c  ex8_matchsticks_square.c  ex9_n_queens.c  sudoku.c
brute-force/: ex5.c  ex6_equal_segments.c
recursion/: ex1_gcd_recursive.c
